--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/tilakthapa/repo")
+            url = uri("https://maven.pkg.github.com/tilakthapa/bikram-sambat")
             credentials {
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
